cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesinvalid-pattern-child.yaml/results.txt
Configuration is invalid - found 1 configuration error(s), and 0 rule(s).
[ERROR] Rule parse error in rule blah:
 you cannot negate in an Or; you can only negate inside an And
  --> rules/invalid-rules/invalid-pattern-child.yaml:9
   7 |       - pattern-either:
   8 |           - pattern: $X == $Y
   9 |           - pattern-not: $Z == $Z
     |             ^^^^^^^^^^^
  10 |
